Fix layout issue, add aria link tooltips

--- a/src/features/footer/Footer.scss
+++ b/src/features/footer/Footer.scss
@@ -28,7 +28,7 @@
       padding: 8px 8px;
 
       .footer-copy {
-        font-size: 0.8em;;
+        font-size: 0.8em;
       }
     }
   }
@@ -53,5 +53,32 @@
 
   .link-divider {
     color: $info-500;
+  }
+
+  .aria-tooltip-link {
+    position: relative;
+    .aria-tooltip {
+      visibility: hidden;
+      width: 130px;
+      background-color: $primary-500;;
+      color: $gray-100;
+      text-align: center;
+      padding: 2px 2px;
+      border-radius: 8px;
+
+      font-size: 12px;
+
+      /* Position the tooltip text - see examples below! */
+      position: absolute;
+      bottom: 22px;
+      right: 0;
+      z-index: 1;
+    }
+
+    &:hover {
+      .aria-tooltip {
+        visibility: visible;
+      }
+    }
   }
 }
