--- a/src/features/layout/Layout.scss
+++ b/src/features/layout/Layout.scss
@@ -8,11 +8,14 @@
   width: 100%;
   padding-left: $minimized-sidebar-width + 8px;
   @media (max-width: map-get($grid-breakpoints, "xl")) {
-    padding-left: 0px; 
+    padding-left: 0px;
   }
 
   &.footer-sidebar-extended {
     padding-left: $extended-sidebar-width - 42px; // 42px is the internal padding on the sidebar transparent part
+    @media (max-width: map-get($grid-breakpoints, "xl")) {
+      padding-left: 0px;
+    }
   }
 }
 
